--- a/assets/stylesheets/getting_started.css
+++ b/assets/stylesheets/getting_started.css
@@ -1,27 +1,64 @@
-article.example {
+.header-main {
+  border-bottom: 0;
+}
+
+.header-design-manual {
+  margin-top: 32px;
+  border-bottom: 0;
+}
+
+.in-page-nav {
+  padding-left: 32px;
+  margin-top: 32px;
+  margin-bottom: 64px;
+  border-left: 10px solid #E5E5E5;
+  margin-left: 2px;
+}
+
+.in-page-nav li,
+.in-page-nav .in-page-nav_item {
+  margin-bottom: 12px;
+}
+
+.example {
   border: 1px solid #c4c4c4;
-  padding: 10px;
-  margin-bottom: 32px
+  padding: 0;
+  margin-bottom: 64px;
+}
+
+.example .example_content {
+  padding: 16px;
 }
 
 .example-heading {
   background: #f3f3f3;
-  padding: .25em;
+  padding: .25em 16px;
 }
 
-textarea.code,
+.example .example-heading {
+  margin-bottom: 0;
+  padding-top: 16px;
+  padding-bottom: 0;
+}
+
+code {
+  font-size: 0.8em;
+  background: #f5f5f5;
+}
+
+.code,
 pre {
   font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace;
-  font-size: 12px;
+  font-size: 16px;
 }
 
 pre {
-  background: #eff0f1;
-  padding: 1em .85em 0;
-  margin-top: 5px;
+  background: #f5f5f5;
+  padding: 16px 16px 0;
+  margin: 0;
 }
 
-.example-panel {
+/*.example-panel {
   position: relative;
   border: 1px solid #c4c4c4;
   padding: 40px 20px 10px;
@@ -36,7 +73,7 @@ pre {
   top: 0;
   left: 0;
   padding: 5px;
-}
+}*/
 
 
 /* form examples css */
@@ -50,7 +87,7 @@ input[type="radio"]+label,
 input[type="checkbox"]+label {
     display: inline-block;
     font-size: 1.25em;
-    margin: -2px 1em 0em .25em;
+    margin: -2px 1em 0 .25em;
     vertical-align: top;
     max-width: 90%;
 }
